Fix gap in header

--- a/TidalWave/public/css/footer.css
+++ b/TidalWave/public/css/footer.css
@@ -25,7 +25,6 @@ html {
 /* Not required for template or sticky footer method. */
 
 .main-row {
-    padding-top: 60px;
     padding-bottom: 60px;
 }
 
